Updated annotation categories in the table

--- a/documentation.html
+++ b/documentation.html
@@ -108,9 +108,29 @@
       <td><i>Polydioxanone, Polyglycolide, Hydroxyapatite</i></td>
     </tr>
     <tr>
+      <td>Biomaterial Types</td>
+      <td>Classification or nature of biomaterials</td>
+      <td><i>Polymer, Ceramic, Metal</i></td>
+    </tr>
+    <tr>
+     <td>Biological Active Substance</td>
+     <td>Substance included in a manufactured object in order to impart a biological activity</td>
+     <td><i>Collagen, Heparin, RGD</i></td>
+   </tr>
+    <tr>
+      <td>Chemical</td>
+      <td>Any material with a definite chemical composition</td>
+      <td><i>Calcium, hydrogen peroxide, ethanol</i></td>
+    </tr>
+    <tr>
       <td>Manufactured Object</td>
       <td>A physical object created by hand or machine</td>
       <td><i>Experimental scaffold, Medical device, Surgical implant</i></td>
+    </tr>
+    <tr>
+      <td>Manufactured Object Component</td>
+      <td>A part, region or component referred to as a distinct unit, such as a surface or a layer</td>
+      <td><i>Core, Shell, Coat </i></td>
     </tr>
     <tr>
       <td>Structure</td>
@@ -118,14 +138,29 @@
       <td><i>Fiber, Gel, Mesh</i></td>
     </tr>
     <tr>
-      <td>Material Processing</td>
-      <td>A planned process which results in physical changes in a specified input material</td>
-      <td><i>Biofabrication, Coating, Knitting</i></td>
+      <td>Shape</td>
+      <td>The external form, contours, or outline of a manufactured object or its components.</td>
+      <td><i>Cube, Tube, Disk </i></td>
+    </tr>
+    <tr>
+      <td>Architectural Organization</td>
+      <td>Characteristics related to the three dimensional organization, orientation and assembly of a manufactured object or its components.</td>
+      <td><i>Multilayered, Unidirectional, Hierarchical</i></td>
+    </tr>
+    <tr>
+      <td>Degradation Features</td>
+      <td>A process or characteristic related to the long term integrity of a manufactured object or its component.</td>
+      <td><i>Degradability, Delayed Resorption, Fragmentation</i></td>
     </tr>
     <tr>
       <td>Manufactured Object Features</td>
       <td>Characteristics inherent or given during processing to a manufactured object or its components</td>
-      <td><i>Degradation features, Architectural organization, Shape</i></td>
+      <td><i>Geometry, Mechanical Property, Physical Property</i></td>
+    </tr>
+    <tr>
+      <td>Material Processing</td>
+      <td>A planned process which results in physical changes in a specified input material</td>
+      <td><i>Biofabrication, Coating, Knitting</i></td>
     </tr>
     <tr>
       <td>Medical Application, Disease or Condition </td>
@@ -148,22 +183,17 @@
       <td><i>Cytotoxicity, Inflammatory reaction, Abscesses</i></td>
     </tr>
      <tr>
-      <td>Biological Active Substance</td>
-      <td>Substance included in a manufactured object in order to impart a biological activity</td>
-      <td><i>Collagen, Heparin, RGD</i></td>
-    </tr>
-     <tr>
       <td>Study Type</td>
       <td>The study set up, such as in vitro, in vivo, or clinical</td>
       <td><i>Clinical study, in vitro, in vivo</i></td>
     </tr>
     <tr>
-      <td>Tissue Type</td>
+      <td>Tissue</td>
       <td>A tissue or an organ mentioned in the study as the target or test system for the biomaterial object or medical device</td>
       <td><i>Lung epithelium, Nerve plexus, Elastic cartilage tissue</i></td>
     </tr>
     <tr>
-      <td>Cell Type</td>
+      <td>Cell</td>
       <td>The reported cell line or primary cell type</td>
       <td><i>Fibroblast, Type II Pneumocyte, Osteocyte</i></td>
     </tr>
