--- a/documentation.html
+++ b/documentation.html
@@ -95,7 +95,7 @@
         <li>The results of the RESTful API are paginated to contain 30 records per page. Once the results are displayed, users can navigate through the pages using http://debbie.bsc.es/search/rest/?offset=[XX]</li>
       </ol>
     </p>
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Annoation Categories</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Annotation Categories</h3>
     <table class="w3-table w3-bordered w3-border w3-centered w3-striped">
     <tr>
       <th>Category</th>
