--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div class="w3-col l3 m3 s3 w3-margin-bottom w3-center">
       <img src="images/javi.jpeg" alt="javi" style="width:68%">
       <h3>Javier Corvi</h3>
-      <p class="w3-opacity">Collaborator</p>
+      <p class="w3-opacity">Bioinformatics Researcher</p>
       <p>Javi is a Research Engineer at the Barcelona Supercomputing Center</p>
       <p class="w3-opacity"></p>
     </div>
