added NatMatRev comment

--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
         <p><a href="https://onlinelibrary.wiley.com/doi/10.1002/adfm.201909910">The Devices, Experimental Scaffolds, and Biomaterials Ontology (DEB): A Tool for Mapping, Annotation, and Analysis of Biomaterials' Data</a></p>
         <p class="w3-opacity">Advanced Functional Materials, February 2020</p>
       </div>
+      <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
+        <a href="https://www.nature.com/articles/s41578-020-0215-z"><img src="images/nature0820.jpeg" alt="osnat_medium_article1" style="width:90%"></a>
+        <p><a href="https://www.nature.com/articles/s41578-020-0215-z">Time to kick-start text mining for biomaterials</a></p>
+        <p class="w3-opacity">Nature Reviews Materials, August 2020</p>
+      </div>
+      <div class="w3-col l3 m3 s3 w3-margin-bottom">
+      </div>
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
       </div>
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
