--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,12 @@
 <div class="w3-content w3-padding w3-white w3-center" style="max-width:1300px; min-width: 1300px;">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSehs0j8huWTR4mUYsA0s7nky2nA9_k3WkK1Tu3Yo2runRjWzQ/viewform?embedded=true" width="800" height="1400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
+
+<!-- Funding Section -->
+<div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="ontology">
+ <p> This project has received funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No 751277
+ </p>
+</div>
 <!-- End page content -->
 
 
