--- a/documentation.html
+++ b/documentation.html
@@ -288,11 +288,11 @@
       <td><a href="https://github.com/ProjectDebbie/DEBBIE_pipeline"><img style="opacity: 0.5" class="w3-image w3-center" src="images/github_icon.png" width="30" height="30"></a></td>
       <td>The automated pipeline retrieves biomaterials abstracts from PubMed, annotates them using multiple lexical assets, and deposits the annotated abstracts in a MongoDB.</td>
     </tr>
-    <tr>
+    <!-- <tr>
       <td>DEBBIE User Interface</td>
       <td></td>
       <td>This repository contains the individual HTML templates, the Python Flask application, and the REST API application.</td>
-    </tr>
+    </tr> -->
     </table>
     <br>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Citing DEBBIE</h3>
@@ -302,8 +302,18 @@
 annotation, and analysis of biomaterials’ data. Adv. Funct. Mater. (2020)
     </p>
   </div>
+
+  <!-- Funding Section -->
+  <div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="ontology">
+   <p> This project has received funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No 751277
+   </p>
+  </div>
+
 <!-- End of overall container below -->
 </div>
+
+
+
 <!-- End page content -->
 <!-- Footer -->
 <!-- End body content -->
