--- a/index.html
+++ b/index.html
@@ -260,5 +260,11 @@
     </div>
 </footer>
 
+<!-- Funding Section -->
+<div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="ontology">
+ <p> This project has received funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No 751277
+ </p>
+</div>
+
 </body>
 </html>
