--- a/index.html
+++ b/index.html
@@ -245,26 +245,38 @@
 <!-- End page content -->
 
 
+
+
+
 <!-- Footer -->
 <footer class="w3-container w3-padding-16 w3-white">
-  <div class="w3-row-padding w3-col l4 m4 s4 w3-right" style="padding-top: 40px;">
+
+  <div class="w3-row-padding w3-col l3 m3 s3" style="padding-left: 75px; padding-top: 15px">
+    <a href="https://cordis.europa.eu/project/id/751277"><img src="images/eu_flag.png" alt="marie" style= "border-radius: 25px; width:60%; height:60%;"></a>
+  </div>
+
+  <div class="w3-row-padding w3-col l3 m3 s3" style="padding-top: 30px;">
     <a href="https://www.bsc.es/es"><img src="images/bsc.png" alt="marie" style="width:80%"></a>
   </div>
 
-    <div class="w3-row-padding w3-col l4 m4 s4">
+  <div class="w3-row-padding w3-col l3 m3 s3" style="padding-top: 23px;">
+    <a href="https://biomaterials.upc.edu/en"><img src="images/upc.png" alt="upc" style="width:100%"></a>
+  </div>
+
+  <div class="w3-row-padding w3-col l3 m3 s3">
       <a href="https://ec.europa.eu/research/mariecurieactions/"><center><img src="images/marie_curie.png" alt="marie" style="width:46%"></center></a>
     </div>
 
-    <div class="w3-row-padding w3-col l4 m4 s4 w3-left" style="padding-top: 40px;" >
-      <a href="https://biomaterials.upc.edu/en"><img src="images/upc.png" alt="upc" style="width:80%"></a>
+    <!-- Funding Section -->
+    <div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="ontology">
+     <p> This project has received funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No 751277
+     </p>
     </div>
+
+
 </footer>
 
-<!-- Funding Section -->
-<div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="ontology">
- <p> This project has received funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No 751277
- </p>
-</div>
+
 
 </body>
 </html>
