--- a/documentation.html
+++ b/documentation.html
@@ -304,11 +304,12 @@ annotation, and analysis of biomaterials’ data. Adv. Funct. Mater. (2020)
   </div>
 
   <!-- Funding Section -->
-  <div class="w3-container w3-padding-16" style="border-radius: 25px; background-color: #F7F7F7;" id="ontology">
-   <p> This project has received funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No 751277
-   </p>
+  <div class='container'>
+      <div class='image-container' style="max-width:2000px;">
+        <img style= "float: left; border-radius: 25px; width:10%; height:10%;" src="images/eu_flag.png" alt="eu_flag">
+        <p style = "margin-left: 150px; padding-top: 20px"> This project has received funding from the European Union’s Horizon 2020 research and innovation programme under the Marie Sklodowska-Curie grant agreement No 751277.</p>
+      </div>
   </div>
-
 <!-- End of overall container below -->
 </div>
 
