--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-16 w3-white" id="about" >
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h2>
-    <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an open access database of
-            biomaterials, implants and medical devices automatically curated from the scientific literature. DEBBIE
+    <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an <a href="https://cordis.europa.eu/project/id/751277"> EU Horizon 2020 funded project </a> to develop an open access database of
+            biomaterials automatically curated from the scientific literature. DEBBIE
             was designed to facilitate a more efficient access to the large literature in the field, generate
             a comprehensive map of research activity and findings, and enable evidence-based selection of materials for
             medical applications.
