--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
         <p><a href="https://www.nature.com/articles/s41578-020-0215-z">Time to kick-start text mining for biomaterials</a></p>
         <p class="w3-opacity">Nature Reviews Materials, August 2020</p>
       </div>
-      <div class="w3-col l3 m3 s3 w3-margin-bottom">
+      <div class="w3-col l3 s3 m3 w3-margin-bottom w3-center">
+        <a href="https://www.aclweb.org/anthology/2021.sdp-1.5/"><img src="images/Biomaterials_Annotator.png" alt="osnat_medium_article1" style="width:103%"></a>
+        <p><a href="https://www.aclweb.org/anthology/2021.sdp-1.5/">The Biomaterials Annotator: a system for ontology-based concept annotation of biomaterials text</a></p>
+        <p class="w3-opacity">Association for Computational Linguistics, June 2021</p>
       </div>
       <div class="w3-col l3 m3 s3 w3-margin-bottom">
       </div>
@@ -182,7 +185,7 @@
       <img src="images/osnat_hakimi.jpg" alt="Osnat" style="width:70%;">
       <h3>Osnat Hakimi</h3>
       <p class="w3-opacity">Project Leader</p>
-      <p>Osnat is a Marie Curie Individual Fellow at the Universitat Politècnica de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
+      <p>Osnat is a Bosch-Aymerich tenure tracked fellow at the Universitat Internacional de Catalunya and a visitor to the Barcelona Supercomputing Center</p>
       <!--<p><button class="w3-button w3-blue w3-block">Contact</button></p> -->
       <p class="w3-opacity"></p>
     </div>
