--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right">
       <a href="https://projectdebbie.github.io/#about" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">About</a>
-      <a href="https://projectdebbie.github.io/#ontology" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Ontology</a>
-      <a href="https://projectdebbie.github.io/#database" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Database</a>
+      <a href="https://bioportal.bioontology.org/ontologies/DEB" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Ontology</a>
+      <a href="https://debbie.bsc.es/search/" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Database</a>
       <a href="https://projectdebbie.github.io/documentation.html" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Documentation</a>
-      <a href="https://projectdebbie.github.io/#research" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Research</a>
-      <a href="https://projectdebbie.github.io/#team" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Team</a>
+      <a href="https://projectdebbie.github.io/#research" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Research&Team</a>
+      <a href="https://github.com/ProjectDebbie" class="w3-bar-item w3-button w3-padding-16">GitHub</a>
       <a href="https://projectdebbie.github.io/contact.html" class="w3-bar-item w3-button w3-padding-16">Contact</a>
     </div>
   </div>
@@ -48,13 +48,13 @@
   <!-- About Section -->
   <div class="w3-container w3-padding-16 w3-white" id="about" >
     <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h2>
-    <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) is an <a href="https://cordis.europa.eu/project/id/751277"> EU Horizon 2020 funded project </a> to develop an open access database of
+    <p>The Database of Experimental Biomaterials and their Biological Effect (DEBBIE) was an <a href="https://cordis.europa.eu/project/id/751277"> EU Horizon 2020 funded project </a> to develop an open access database of
             biomaterials automatically curated from the scientific literature. DEBBIE
             was designed to facilitate a more efficient access to the large literature in the field, generate
             a comprehensive map of research activity and findings, and enable evidence-based selection of materials for
             medical applications.
     </p>
-    <p>Beyond the development of database, the project is dedicated to the creation, adaptation and optimization of
+    <p>Beyond the development of database, the project was dedicated to the creation, adaptation and optimization of
             text mining tools for the biomaterials domain. These tools, including the DEBBIE retrieval and annotation
             pipeline (see illustration below), are openly available for download and use through the
             project’s <a href="https://github.com/ProjectDebbie/DEBBIE_pipeline"> GitHub repositories</a>.
