--- a/documentation.html
+++ b/documentation.html
@@ -42,7 +42,7 @@
       <a href="https://projectdebbie.github.io/documentation.html" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Documentation</a>
       <a href="https://projectdebbie.github.io/#research" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Research</a>
       <a href="https://projectdebbie.github.io/#team" class="w3-bar-item w3-button w3-padding-16" style="text-decoration:none">Team</a>
-      <a href="https://projectdebbie.github.io/contact.html" class="w3-bar-item w3-button w3-padding-16">Contact</a>
+      <a href="https://projectdebbie.github.io/contact.html" class="w3-bar-item w3-button w3-padding-16">Contacts</a>
     </div>
   </div>
 </div>
