--- a/documentation.html
+++ b/documentation.html
@@ -85,9 +85,9 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">DEBBIE's RESTful API</h3>
     <p>
       <ol class="list" style="padding-left: 100px;">
-        <li>The contents of DEBBIE are programmatically accessible through the RESTful API located at <a href="http://debbie.bsc.es/search/rest"><u>http://debbie.bsc.es/search/rest</u></a></li>
+        <li>The contents of DEBBIE are programmatically accessible through the RESTful API located at <a href="http://debbie.bsc.es/search/api/v1"><u>http://debbie.bsc.es/search/rest</u></a></li>
         <li>Users can submit different searches through the RESTful API: <br>
-        <ul>
+        <ul class="list" style="padding-left: 100px;">
         <li>        
         Returns the frequency of usage of the term of interest over time, normalized per abstract: <br>
         https://debbie.bsc.es/search/api/v1/search/<term>/years<br>
