--- a/documentation.html
+++ b/documentation.html
@@ -85,9 +85,9 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">DEBBIE's RESTful API</h3>
     <p>
       <ol class="list" style="padding-left: 100px;">
-        <li>The contents of DEBBIE are programmatically accessible through the RESTful API located at <a href="http://debbie.bsc.es/search/api/v1"><u>http://debbie.bsc.es/search/rest</u></a></li>
+        <li>The contents of DEBBIE are programmatically accessible through the RESTful API located at <a href="http://debbie.bsc.es/search/api/v1"><u>http://debbie.bsc.es/search/api/v1</u></a></li>
         <li>Users can submit different searches through the RESTful API: <br>
-        <ul class="list" style="padding-left: 100px;">
+        <ol class="list" style="padding-left: 100px;">
         <li>        
         Returns the frequency of usage of the term of interest over time, normalized per abstract: <br>
         https://debbie.bsc.es/search/api/v1/search/<term>/years<br>
@@ -130,7 +130,7 @@
          </li>
          <li>Returns network that described the relationships between the term of interest as well as the associated terms.: <br>
          https://debbie.bsc.es/search/api/v1/search/<term>/network<br></li>
-         <ul>       
+         <ol>       
         </li>
         
       </ol>
