--- a/documentation.html
+++ b/documentation.html
@@ -90,46 +90,46 @@
         <ol class="list" style="padding-left: 100px;">
         <li>        
         Returns the frequency of usage of the term of interest over time, normalized per abstract: <br>
-        https://debbie.bsc.es/search/api/v1/search/<term>/years<br>
+        https://debbie.bsc.es/search/api/v1/search/[term]/years<br>
         </li>        
         <li>
         Returns the thirteen most frequently annotated terms that are associated (co-occur) with the term of interest in different abstracts: <br>
-        https://debbie.bsc.es/search/api/v1/search/<term>/top_terms<br>
+        https://debbie.bsc.es/search/api/v1/search/[term]/top_terms<br>
         </li>
         <li>        
         Returns the thirteen most frequently annotated terms that co-occurs with term of interest within a particular category: <br>
-        https://debbie.bsc.es/search/api/v1/search/<term>/top_terms/<type><br>
+        https://debbie.bsc.es/search/api/v1/search/[term]/top_terms/[type]<br>
         
-        Category possible values (type):
+        Category possible values (type):<br>
 
-                 Biomaterial
+                 Biomaterial - 
 
-                 Biomaterial Types
+                 Biomaterial Types -
 
-                 Biologically Active Substance
+                 Biologically Active Substance -
 
-                 Manufactured Object
+                 Manufactured Object -
 
-                 Manufactured Object Component
+                 Manufactured Object Component -
 
-                 Medical Application, Disease or condition  
+                 Medical Application, Disease or condition  - 
 
-                 Manufactured Object Features
+                 Manufactured Object Features -
 
-                 Structure
+                 Structure -
 
-                 Associated Biological Process
+                 Associated Biological Process -
 
-                 Material Processing
+                 Material Processing -
 
-                 Cell
+                 Cell -
 
-                 Species
+                 Species -
 
                  Tissue        
          </li>
          <li>Returns network that described the relationships between the term of interest as well as the associated terms.: <br>
-         https://debbie.bsc.es/search/api/v1/search/<term>/network<br></li>
+         https://debbie.bsc.es/search/api/v1/search/[term]/network<br></li>
          <ol>       
         </li>
         
