--- a/documentation.html
+++ b/documentation.html
@@ -104,27 +104,27 @@
 
                  Biomaterial - 
 
-                 Biomaterial Types -
+                 BiomaterialTypes -
 
-                 Biologically Active Substance -
+                 BiologicallyActiveSubstance -
 
-                 Manufactured Object -
+                 ManufacturedObject -
 
-                 Manufactured Object Component -
+                 ManufacturedObjectComponent -
 
-                 Medical Application, Disease or condition  - 
+                 MedicalApplication  - 
 
-                 Manufactured Object Features -
+                 ManufacturedObjectFeatures -
 
                  Structure -
 
-                 Associated Biological Process -
+                 AssociatedBiologicalProcess -
 
-                 Material Processing -
+                 MaterialProcessing - EffectOnBiologicalSystem
 
-                 Cell -
+                 Cell - AdverseEffects
 
-                 Species -
+                 Species - ResearchTechnique
 
                  Tissue        
          </li>
