--- a/documentation.html
+++ b/documentation.html
@@ -100,7 +100,7 @@
         Returns the thirteen most frequently annotated terms that co-occurs with term of interest within a particular category: <br>
         https://debbie.bsc.es/search/api/v1/search/[term]/top_terms/[type]<br>
         
-        Category possible values (type):<br>
+        Category possible values [type]:<br>
 
                  Biomaterial - 
 
