--- a/documentation.html
+++ b/documentation.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
-        ul {
+        ul.ontology {
           flex-wrap: wrap;
           display: flex;
           font-family: Tahoma, Geneva, sans-serif;
           color: blue;
         }
-        ul li {
+        ul.li.ontology {
           flex: 1 0 50%;
           font-family: Tahoma, Geneva, sans-serif;
           list-style: none;
@@ -251,19 +251,19 @@
     <br>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Ontology/Terminology Sources</h3>
       <!-- list of superclasses -->
-      <ul class="list" style="padding-left: 150px;">
+      <ul class="ontology" style="padding-left: 150px;">
         <!--row 1 -->
-          <li><a href="https://bioportal.bioontology.org/ontologies/MESH">Medical Subject Headings (UMLS)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/DEB">Devices, Experimental Scaffolds and Biomaterials Ontology (DEB)</a></li>
-          <li><a href="https://www.gmdnagency.org/">Global Medical Device Nomenclature (GMDN)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/CHEBI">Chemical Entities of Biological Interest (CHEBI)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/IOBC">Interlinking Ontology for Biological Concepts (IOBC)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/NCIT">National Cancer Institute Thesaurus (NCIT)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/NPO">NanoParticle Ontology (NPO)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/OBI">Ontology for Biomedical Investigations (OBI)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/ONTOTOXNUC">Ontology of Nuclear Toxicity (ONTOTOXNUC)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/UBERON">Uber Anatomy Ontology (UBERON)</a></li>
-          <li><a href="https://bioportal.bioontology.org/ontologies/PREMEDONTO">Precision Medicine Ontology (PREMEDONTO)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/MESH">Medical Subject Headings (UMLS)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/DEB">Devices, Experimental Scaffolds and Biomaterials Ontology (DEB)</a></li>
+          <li class="ontology"><a href="https://www.gmdnagency.org/">Global Medical Device Nomenclature (GMDN)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/CHEBI">Chemical Entities of Biological Interest (CHEBI)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/IOBC">Interlinking Ontology for Biological Concepts (IOBC)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/NCIT">National Cancer Institute Thesaurus (NCIT)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/NPO">NanoParticle Ontology (NPO)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/OBI">Ontology for Biomedical Investigations (OBI)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/ONTOTOXNUC">Ontology of Nuclear Toxicity (ONTOTOXNUC)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/UBERON">Uber Anatomy Ontology (UBERON)</a></li>
+          <li class="ontology"><a href="https://bioportal.bioontology.org/ontologies/PREMEDONTO">Precision Medicine Ontology (PREMEDONTO)</a></li>
       </ul>
     <br>
         <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Individual Pipeline Components and Databases</h3>
