--- a/documentation.html
+++ b/documentation.html
@@ -11,7 +11,7 @@
           font-family: Tahoma, Geneva, sans-serif;
           color: blue;
         }
-        ul.li.ontology {
+        ul li.ontology {
           flex: 1 0 50%;
           font-family: Tahoma, Geneva, sans-serif;
           list-style: none;
