--- a/documentation.html
+++ b/documentation.html
@@ -86,7 +86,7 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">DEBBIE's RESTful API</h3>
     <p>
       <ol class="list" style="padding-left: 100px;">
-        <li>The contents of DEBBIE are programmatically accessible through the RESTful API located at <a href="http://debbie.bsc.es/search/api/v1"><u>http://debbie.bsc.es/search/api/v1</u></a></li>
+        <li>The contents of DEBBIE are programmatically accessible through the RESTful API located at <a href="https://debbie.bsc.es/search/api/v1"><u>http://debbie.bsc.es/search/api/v1</u></a></li>
         <br>
         <li>Users can submit different searches through the RESTful API: <br><br>
         <ul class="list_api" style="padding-left: 50px;">
@@ -132,7 +132,13 @@
          https://debbie.bsc.es/search/api/v1/search/[term]/network<br></li>
          <ul>       
         </li>
-        
+                <li>
+                Examples with the term "silk":
+                https://debbie.bsc.es/search/api/v1/search/silk/years<br>      
+                https://debbie.bsc.es/search/api/v1/search/silk/top_terms<br>
+                https://debbie.bsc.es/search/api/v1/search/silk/top_terms/Biomaterial<br>     
+                https://debbie.bsc.es/search/api/v1/search/silk/network<br>
+                </li>
       </ol>
     </p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Annotation Categories</h3>
