--- a/documentation.html
+++ b/documentation.html
@@ -128,17 +128,16 @@
 
                  Tissue        
          </li><br>
-         <li>Returns network that described the relationships between the term of interest as well as the associated terms.: <br>
-         https://debbie.bsc.es/search/api/v1/search/[term]/network<br></li>
-         <ul>       
-        </li>
-                <li>
+         <li>Returns network that described the relationships between the term of interest as well as the associated terms: <br>
+         https://debbie.bsc.es/search/api/v1/search/[term]/network<br></li><br>
+         
+         <li>
                 Examples with the term "silk":
                 https://debbie.bsc.es/search/api/v1/search/silk/years<br>      
                 https://debbie.bsc.es/search/api/v1/search/silk/top_terms<br>
                 https://debbie.bsc.es/search/api/v1/search/silk/top_terms/Biomaterial<br>     
                 https://debbie.bsc.es/search/api/v1/search/silk/network<br>
-                </li>
+         </li>
       </ol>
     </p>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Annotation Categories</h3>
