--- a/documentation.html
+++ b/documentation.html
@@ -132,7 +132,7 @@
          https://debbie.bsc.es/search/api/v1/search/[term]/network<br></li><br>
          
          <li>
-                Examples with the term "silk":
+                Examples with the term "silk":<br>
                 https://debbie.bsc.es/search/api/v1/search/silk/years<br>      
                 https://debbie.bsc.es/search/api/v1/search/silk/top_terms<br>
                 https://debbie.bsc.es/search/api/v1/search/silk/top_terms/Biomaterial<br>     
