--- a/documentation.html
+++ b/documentation.html
@@ -341,9 +341,14 @@
     </table>
     <br>
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Citing DEBBIE</h3>
-    <p>McKitrick A, Corvi J and Hakimi O.  Manuscript in preparation (2020)
+    <p>
+           Corvi, J., McKitrick, A., Fernández, J., Fuenteslópez, C., Gelpi, J., Ginebra, M.-P., Capella-Guitierrez, S., Hakimi, O. DEBBIE: the open access database of experimental scaffolds and biomaterials with an automated information retrieval pipeline.
+            Manuscript in preparation (2022).
     </p>
-    <p>Hakimi O, Gelpi JL, Krallinger M, Curi F, Repchevsky D and Ginebra MP. The devices, experimental scaffolds, and biomaterials ontology (deb): A tool for mapping,
+    <p>
+        Corvi, J., Fuenteslópez, C., Fernández, J., Gelpi, J., Ginebra, M.-P., Capella-Guitierrez, S., Hakimi, O. The biomaterials annotator: a systemfor ontology-based concept annotation of biomaterials text. In:Proceedings of the Second Workshop on Scholarly DocumentProcessing, pp. 36–48. Association for Computational Linguistics,Online (2021). https://www.aclweb.org/anthology/2021.sdp-1.5
+    </p>
+    <p>Hakimi, O., Gelpi, J., Krallinger, M., Curi, F., Repchevsky, D., Ginebra, M.-P. The devices, experimental scaffolds, and biomaterials ontology (deb): A tool for mapping,
 annotation, and analysis of biomaterials’ data. Adv. Funct. Mater. (2020)
     </p>
   </div>
