--- a/documentation.html
+++ b/documentation.html
@@ -69,8 +69,8 @@
     
     </p>
    
-   <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Watch the DEBBIE video to learn more about its capabilities</h2>
-     <iframe width="420" height="315" src="https://youtu.be/9ZMeheWFnYA?autoplay=1"> </iframe> 
+   <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Watch the <a target="_blank" href="https://youtu.be/9ZMeheWFnYA">DEBBIE video</a> to learn more about its capabilities.</h2>
+<!--      <iframe width="420" height="315" src="https://youtu.be/9ZMeheWFnYA?autoplay=1"> </iframe>  -->
 <!--     <video width="1000" height="800" controls preload="metadata"> -->
 <!-- 	  <source src="https://youtu.be/CuKvC-b2b9Q" type="video/mp4"> -->
 <!-- 	  Your browser does not support the video tag. -->
